overflow windows fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+::-webkit-scrollbar {
+    display: none;
+}
 #root{
     min-height: 102vh;
     
