--- a/src/pages/TopMovies/TopMovies.css
+++ b/src/pages/TopMovies/TopMovies.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     background-color: #343A40;
-    overflow: scroll;
+    overflow-x: scroll;
 }
 ._cards{
     width: 150px;
